# Rust-Embedded

./: .gitignore  LICENSE  README.md
docs/: _config.yml  index.html  index.md
docs/_layouts/: default.html
docs/examples/: todo.md
docs/examples/01/: doc.md  ex01.drawio
docs/presentation/: intro.html  intro.md  rust_code_level.html  rust_code_level.md  rust_coding_guide.html  rust_coding_guide.md  rust_compiler_and_library.md  rust_tools.md
docs/presentation/img/: .$rustdocs.drawio.bkp  rustdocs.drawio
ex01/: Cargo.toml  link.x
ex01/.cargo/: config.toml
ex01/src/: main.rs
ex02/: Cargo.toml  build.rs
ex02/src/: hello.c  main.rs
ex03/: Makefile  main.c
ex03/intf/: Cargo.toml
ex04/: Cargo.toml  README.txt  link.x
ex04/.cargo/: config.toml
ex04/src/: calloc.rs  main.rs  uart.rs
ex05/: Cargo.toml
ex05/src/: main.rs
ex06/src/: lib.rs
ex06/tests/: alloc_free.rs
ex07/src/: dry.rs  lib.rs  simple_macro.rs
ex08/: Cargo.toml
ex08/hello-world-derive/: Cargo.toml
ex08/src/: main.rs
ex09/: Cargo.toml
ex09/docs/: state_machine.md
ex09/src/: code_gen.rs  custom_parse.rs  custom_token.rs  lib.rs
ex09/tests/: macro_parse.rs
ex10/: Cargo.toml
ex10/src/: lib.rs
ex10/tests/: json_test.rs
ex11/: Cargo.toml  Makefile.toml  ci_run.sh  mini_os_tasklist.md
ex11/.cargo/: config.toml
ex11/bucket_allocator/: Cargo.toml
ex11/logger/: Cargo.toml
ex11/minios/: Cargo.toml  build.rs  link.x
ex11/minios/src/: example.rs  executor.rs  main.rs  pool_alloc.rs  task.rs  uart_log.rs
ex11/pool_allocator/: Cargo.toml  ratio.txt
(+9 files in other folders)
