[package]
name = "ex09"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
syn = { version = "2.0.25", features = ["full", "extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"
prettyplease = "0.2.16"
