[package]
name = "minios"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
logger = { path = "../logger" }
pool_allocator = { path = "../pool_allocator" }

[profile.dev]
panic="abort"
debug = true

[profile.release]
panic="abort"
strip = true
